--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Templates Styles */
+@import './pages/templates/templates.css';
+
 /* Cairo Font Definitions - Using Google Fonts as fallback */
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&display=swap');
 
